--- a/toDoList.css
+++ b/toDoList.css
@@ -8,9 +8,10 @@
     margin: 0;
     padding: 0;
     font-family: 'Roboto-Regular';
+    box-sizing: border-box;
 }
 
-#toDoList {
+.toDoList {
     border: black 10px solid;
     margin: 30px 30px 0px 30px;
     height: fit-content;
@@ -50,9 +51,11 @@ textarea {
 
 textarea {
     display: block;
-    margin: 10px auto;
-    height: 100px;
-    width: 1000px;
+    margin: 30px auto 10px auto;
+    height: 10vh;
+    min-width: 50%;
+    width: 75%;
+    max-width: 100%;
 }
 
 #todaysGoal {
@@ -68,6 +71,14 @@ textarea {
     padding: 10px 10px 10px 10px;
 }
 
-/* input[type='checkbox'] {
-    float: right;
-} */
+input[type='checkbox'] {
+    display: none;
+}
+
+#checkBox {
+    display: initial;
+}
+
+.checkBoxes {
+    margin: 10px 10px 10px 30px;
+}
